# calq

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CMakeLists_gabac.txt.in  CONTRIBUTING.md  Doxyfile.in  LICENSE  README.md  TODO  TODO.md  TODO.txt  before-commit.sh  calq.kdev4  calq.pc.in  contributors.txt  range.c
source/apps/cip/: CMakeLists.txt  cip.cc  common.h  cq-file.cc  cq-file.h  decode.cc  decode.h  encode.cc  errors.h  exceptions.h  fasta-file.cc  file.cc  file.h  helpers.cc  program-options.cc  program-options.h  sam-block.h  sam-file-handler.cc  sam-file-handler.h  sam-file.cc  sam-file.h  sam-record.cc  sam-record.h
source/apps/cip/todo/: calq-codec.cc  sam-file-handler.cc
source/calq/: CMakeLists.txt  SAMFileHandler.cc  calq-codec.cc  calq.cc  calq.h  calq_coder.cc  calq_coder.h  calq_decoder.cc  calq_decoder.h  calq_encoder.cc  calq_encoder.h  circular-buffer.h  circular_buffer.h  constants.h  cq_file.cc  cq_file.h  error-exception-reporter.h  error_exception_reporter.h  exceptions.cc  exceptions.h  fasta_file.cc  fasta_file.h  file.cc  file.h  filter-buffer.cc  filter-buffer.h  filter_buffer.cc  filter_buffer.h  genotyper.cc  genotyper.h  haplotyper.cc  haplotyper.h  helpers.cc  helpers.h  lloyd-max-quantizer.cc  lloyd-max-quantizer.h  lloyd_max_quantizer.cc  lloyd_max_quantizer.h  log.cc  log.h  (+45 more)
source/calq/range/: range.c  range.h
source/calqapp/: CMakeLists.txt  SAMFileHandler.cc  SAMFileHandler.h  calq.cc  cq_file.cc  cq_file.h  error_reporter.h  fasta_file.cc  fasta_file.h  file.cc  file.h  helpers.cc  helpers.h  logging.h  program_options.cc  program_options.h  sam_block.cc  sam_block.h  sam_file.cc  sam_file.h  sam_record.cc  sam_record.h
source/calqapp/range/: range.c  range.h
source/cip/: CMakeLists.txt  calq.cc  cq-file.cc  cq-file.h  error-reporter.h  error.h  error_reporter.h  exceptions.cc  fasta-file.cc  fasta-file.h  file.cc  file.h  helpers.cc  helpers.h  logging.h  program-options.cc  program-options.h  sam-block.cc  sam-block.h  sam-file-handler.cc  sam-file-handler.h  sam-file.cc  sam-file.h  sam-record.cc  sam-record.h
source/libs/calq/: CMakeLists.txt  calq-codec.cc  calq-codec.h  calq.h  circular-buffer.h  constants.h  encoding-read.h  error-exception-reporter.h  errors.h  exceptions.cc  exceptions.h  fasta-file-reader.cc  fasta-file-reader.h  fasta-record.h  file-line-reader.cc  file-line-reader.h  file-reader.cc  file-reader.h  file-writer.cc  file-writer.h  file.cc  file.h  filter-buffer.cc  filter-buffer.h  genotyper.cc  genotyper.h  haplotyper.cc  haplotyper.h  helpers.cc  lloyd-max-quantizer.cc  lloyd-max-quantizer.h  log.cc  log.h  probability-distribution.cc  probability-distribution.h  qual-decoder.cc  qual-decoder.h  qual-encoder.cc  qual-encoder.h  quantizer.cc  (+16 more)
src/calq/: CMakeLists.txt  CalqDecoder.cc  CalqDecoder.h  CalqEncoder.cc  CalqEncoder.h  calq-codec.cc  calq.cc  cip.cc  circular-buffer.h  cmake.h  common.h  config.h  constants.h  data-structures.h  decode.cc  decode.h  encode.cc  encode.h  exceptions.h  fasta-file-reader.cc  fasta-file-reader.h  fasta-record.h  file-reader.cc  file-reader.h  file-writer.cc  file-writer.h  filter-buffer.cc  filter-buffer.h  genotyper.cc  genotyper.h  haplotyper.cc  haplotyper.h  helpers.cc  helpers.h  lloyd-max-quantizer.cc  lloyd-max-quantizer.h  log.h  min-sam-record.h  probability-distribution.cc  probability-distribution.h  (+21 more)
src/calq/API/: CalqDecoder.h  CalqEncoder.h  calq.h
src/calq/API/Common/: Exceptions.h  Options.h
src/calq/Common/: ErrorExceptionReporter.h  Exceptions.cc  Options.cc  Options.h  constants.h  helpers.cc  helpers.h  log.h  os.h
src/calq/IO/: File.cc  File.h
src/calq/IO/CQ/: CQFile.cc  CQFile.h
src/calq/IO/FASTA/: FASTAFile.cc  FASTAFile.h
src/calq/IO/SAM/: SAMBlock.cc  SAMBlock.h  SAMFile.cc  SAMFile.h  SAMPileup.cc  SAMPileup.h  SAMPileupDeque.cc  SAMPileupDeque.h  SAMRecord.cc  SAMRecord.h
src/calq/QualCodec/: BaseSpreader.cc  BaseSpreader.h  CircularBuffer.h  Estimator.cc  Estimator.h  FilterBuffer.cc  FilterBuffer.h  GaussKernel.cc  GaussKernel.h  Genotyper.cc  Genotyper.h  Haplotyper.cc  Haplotyper.h  HaplotyperTest.cc  HaplotyperTest.h  QualDecoder.cc  QualDecoder.h  QualEncoder.cc  QualEncoder.h  SoftclipSpreader.cc  SoftclipSpreader.h
src/calq/QualCodec/Quantizers/: LloydMaxQuantizer.cc  LloydMaxQuantizer.h  OneToOneMappingQuantizer.cc  OneToOneMappingQuantizer.h  ProbabilityDistribution.cc  ProbabilityDistribution.h  Quantizer.cc  UniformMinMaxQuantizer.cc  UniformMinMaxQuantizer.h  (+2 more)
src/calq/todo/: calq-codec.cc  calq-codec.h  cq-file.h  program-options-tbd.cc  sam-block.h
tests/: +data+gidb+bacteria+DH10B+tmp+MiSeq_Ecoli_DH10B_110721_PF.sam  +data+gidb+bacteria+ERA269036+tmp+9799_7#3.sam  +data+gidb+cancercells+ad3d4757-f358-40a3-9d92-742463a95e88+tmp+G15511.HCC1143.1.sam  +data+gidb+human+IonTorrent+tmp+sample-2-10_sorted.sam  +data+gidb+human+IonTorrent+tmp+sample-2-12_sorted.sam  +data+gidb+human+RNAseq+tmp+K562_cytosol_LID8465_TopHat_v2.sam  +data+gidb+human+illumina+ERP001960+tmp+NA12890_S1.sam  +data+gidb+human+illumina+ERP002490+tmp+NA12877_S1.sam  +data+gidb+human+illumina+ERP002490+tmp+NA12878_S1.sam  +data+gidb+human+illumina+ERP002490+tmp+NA12882_S1.sam  +data+gidb+human+illumina+NA21144.chrom11+tmp+NA21144.chrom11.ILLUMINA.bwa.GIH.low_coverage.20130415.sam  CMakeLists.txt  DH10B_singleread.sam  burn-in.pl
tests/calq/: CMakeLists.txt
tests/libs/: CMakeLists.txt
tests/libs/calq/: CMakeLists.txt  circular-buffer-test.cc  fasta-file-reader-test.cc  file-reader-test.cc  file-test.cc  file-writer-test.cc  filter-buffer-test.cc  genotyper-test.cc  haplotyper-test.cc  lloyd-max-quantizer-test.cc  probability-distribution-test.cc  quantizer-test.cc  sam-file-reader-test.cc  sam-pileup-test.cc  sam-record-test.cc  softclip-spreader-test.cc  uniform-min-max-quantizer-test.cc  uniform-quantizer-test.cc
tests/libs/util/: CMakeLists.txt  fasta-file-reader-test.cc  file-reader-test.cc  file-test.cc  file-writer-test.cc  helpers-test.cc  helpers.cc  helpers.h  sam-file-reader-test.cc  sam-record-test.cc
(+774 files in other folders)
